--- a/ENSF400_Lab02.ipynb
+++ b/ENSF400_Lab02.ipynb
@@ -367,17 +367,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Branch(name=\"Alends/Branch\"), Branch(name=\"main\"), Branch(name=\"newbranch\")]\n",
+      "PullRequest(title=\"init commit\", number=1)\n",
+      "Message: Merge pull request #1 from Eliaspw15/newbranch\n",
+      "\n",
+      "init commit\n",
+      "Author: Eliaspw15\n",
+      "Message: init commit\n",
+      "Author: Eliaspw15\n",
+      "Message: Add Lab02 files.\n",
+      "Author: Steve Drew\n",
+      "Message: Initial commit\n",
+      "Author: Steve Drew\n"
+     ]
+    }
+   ],
    "source": [
     "from github import Github\n",
-    "\n",
-    "# or using an access token\n",
-    "g = Github(\"your_access_token\")\n",
-    "repo = g.get_repo(\"username/repo\")\n",
-    "\n",
-    "## Complete your tasks from here"
+    "g = Github()\n",
+    "repo = g.get_repo(\"Eliaspw15/ENSF400-L2\")\n",
+    "print(list(repo.get_branches()))\n",
+    "pulls = repo.get_pulls(state='all', sort='created')\n",
+    "for pr in pulls:\n",
+    "    print(pr)\n",
+    "commit = repo.get_commits()\n",
+    "for coms in commit:\n",
+    "    print(f\"Message: {coms.commit.message}\")\n",
+    "    print(f\"Author: {coms.commit.author.name}\")\n"
    ]
   },
   {
